--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,8 @@ if (hasProperty("teamcity")) {
 } else {
     project.version = targetVersion + tail
 }
-print(project.version)
+println(project.version)
 if (hasProperty("teamcity")) {
     teamcity["artefaict_version"] = project.version
-    print(teamcity)
+    println(teamcity["artefaict_version"])
 }
