--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ if (hasProperty("teamcity")) {
 }
 println(project.version)
 if (hasProperty("teamcity")) {
+    println(teamcity)
     teamcity["reverse.dep.Versions_Start.artefaict_version"] = project.version
     println(teamcity["reverse.dep.Versions_Start.artefaict_version"])
 }
