--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,6 @@ if (hasProperty("teamcity")) {
 println(project.version)
 if (hasProperty("teamcity")) {
     println(teamcity)
-    teamcity["reverse.dep.Versions_Start.artefaict_version"] = project.version
-    println(teamcity["reverse.dep.Versions_Start.artefaict_version"])
+    teamcity["env.ARTIFACT_VERSION"] = project.version
+    println(teamcity["env.ARTIFACT_VERSION"])
 }
