--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,11 @@ if (hasProperty("teamcity")) {
 println(project.version)
 if (hasProperty("teamcity")) {
     println(teamcity)
-    teamcity["env.ARTIFACT_VERSION"] = project.version
-    println(teamcity["env.ARTIFACT_VERSION"])
+    println("old " + teamcity["system.ARTIFACT_VERSION"])
+    teamcity["system.ARTIFACT_VERSION"] = project.version
+    println("new " + teamcity["system.ARTIFACT_VERSION"])
+    println("===")
+    println("old " + teamcity["ARTIFACT_VERSION"])
+    teamcity["ARTIFACT_VERSION"] = project.version
+    println("new " + teamcity["ARTIFACT_VERSION"])
 }
